--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-<h1>I'll Learn JS</h1>
+<h1>I'll exactly Learn JS</h1>
 
   <script src="./js/script.js"></script>
 </body>
